--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="Pictures\KUTTU\alanphoto1.jpg" alt="kuttu"></td>
+      <td><img src="wd image\alanphoto1.jpg" alt="kuttu"></td>
       <td>
         <h1>ALAN JOSEPH </h1>
         <p><strong>Rookie web dev</strong>
